# rules_batch

./: .gitignore  404.html  README.md  WORKSPACE.bazel  bat_binary.html  bat_binary_info.html  bat_info.html  bat_library.html  bat_test.html  index.html  print.html  providers.html  rules.html  runfiles.html  searchindex.js  searchindex.json  toc.html  toc.js  version.bzl
.bcr/: metadata.template.json  source.template.json
.github/: release_notes.template
.github/workflows/: ci.yaml  release.yaml
batch/: BUILD.bazel  bat_binary.bzl  bat_binary_info.bzl  bat_info.bzl  bat_library.bzl  bat_test.bzl
batch/private/: BUILD.bazel  bat_executable.bzl  providers.bzl
batch/runfiles/: BUILD.bazel  README.md  runfiles.bat
batch/runfiles/tests/: BUILD.bazel  data.txt  runfiles_test.bat
docs/: BUILD.bazel  book.toml
docs/src/: SUMMARY.md  index.md  providers.md  rules.md  runfiles.md
examples/: .bazelrc  BUILD.bazel  MODULE.bazel  greet.bat
examples/data/: greeting.txt
