load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "bat_binary.bzl",
        "bat_binary_info.bzl",
        "bat_info.bzl",
        "bat_library.bzl",
        "bat_test.bzl",
    ],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "rules_bzl",
    srcs = [
        "bat_binary.bzl",
        "bat_binary_info.bzl",
        "bat_info.bzl",
        "bat_library.bzl",
        "bat_test.bzl",
    ],
    visibility = ["//visibility:public"],
    deps = ["//batch/private:private_bzl"],
)
